--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "latekvo.github.io",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -10,8 +10,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.6.3",
     "@astrojs/check": "^0.5.10",
+    "@astrojs/react": "^3.3.0",
+    "@types/react": "^18.2.79",
+    "@types/react-dom": "^18.2.25",
+    "astro": "^4.6.3",
+    "framer-motion": "^11.1.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "^5.4.5"
   }
 }
